...
        view.smartQuotesType = .no
        view.keyboardDismissMode = .interactive
        view.alwaysBounceVertical = true
        view.textContainerInset = UIEdgeInsets(top: 16, left: 16, bottom: 96, right: 16)
        view.textContainer.lineFragmentPadding = 0
        view.adjustsFontForContentSizeCategory = true
        view.accessibilityIdentifier = "blockDocumentTextView"
        view.accessibilityLabel = "문서 편집기"
        let editingEquationIDs = selection.map {
            Self.equationBlockIDs(in: blocks, selection: $0)
        } ?? []
        view.attributedText = MarkdownStyler.styledDocument(
            blocks,
...
    ) {
        self.onAction = onAction
        super.init(frame: CGRect(x: 0, y: 0, width: UIScreen.main.bounds.width, height: 64))
        autoresizingMask = .flexibleWidth
        backgroundColor = .clear
        tintColor = .label
        accessibilityIdentifier = "blockKeyboardToolbar"
        addInteraction(UILargeContentViewerInteraction(delegate: nil))

        surfaceView.translatesAutoresizingMaskIntoConstraints = false
        surfaceView.layer.cornerRadius = 28
        surfaceView.layer.cornerCurve = .continuous
        surfaceView.clipsToBounds = true
...
            stackView.bottomAnchor.constraint(equalTo: scrollView.contentLayoutGuide.bottomAnchor),
            stackView.heightAnchor.constraint(equalTo: scrollView.frameLayoutGuide.heightAnchor),
        ])

        configureButton(kindButton, image: "textformat", label: "블록 유형", identifier: "blockToolbar.type")
        kindButton.showsMenuAsPrimaryAction = true
        stackView.addArrangedSubview(button("plus", "블록 추가", "blockToolbar.add", .insert))
        stackView.addArrangedSubview(kindButton)
        stackView.addArrangedSubview(button("bold", "굵게", "blockToolbar.bold", .format(.bold)))
        stackView.addArrangedSubview(button("italic", "기울임", "blockToolbar.italic", .format(.italic)))
        stackView.addArrangedSubview(button("strikethrough", "취소선", "blockToolbar.strike", .format(.strikethrough)))
        stackView.addArrangedSubview(button("chevron.left.forwardslash.chevron.right", "인라인 코드", "blockToolbar.code", .format(.code)))
        stackView.addArrangedSubview(button("decrease.indent", "내어쓰기", "blockToolbar.outdent", .outdent))
        stackView.addArrangedSubview(button("increase.indent", "들여쓰기", "blockToolbar.indent", .indent))
        configureButton(undoButton, image: "arrow.uturn.backward", label: "실행 취소", identifier: "blockToolbar.undo")
        undoButton.addAction(UIAction { [weak self] _ in self?.onAction(.undo) }, for: .touchUpInside)
        stackView.addArrangedSubview(undoButton)
        configureButton(redoButton, image: "arrow.uturn.forward", label: "다시 실행", identifier: "blockToolbar.redo")
        redoButton.addAction(UIAction { [weak self] _ in self?.onAction(.redo) }, for: .touchUpInside)
        stackView.addArrangedSubview(redoButton)

...
